@@ -44,6 +44,18 @@ typedef struct _gncBillTerm GncBillTerm;
 #define GNC_IS_BILLTERM(obj)  (QOF_CHECK_TYPE((obj), GNC_ID_BILLTERM))
 #define GNC_BILLTERM(obj)     (QOF_CHECK_CAST((obj), GNC_ID_BILLTERM, GncBillTerm))
 
+/** @name BillTerm parameter names */
+/** @{ */
+#define GNC_BILLTERM_NAME 		"name"
+#define GNC_BILLTERM_DESC 		"description"
+#define GNC_BILLTERM_DUEDAYS 	"number of days due"
+#define GNC_BILLTERM_DISCDAYS 	"number of discounted days"
+#define GNC_BILLTERM_CUTOFF 	"cut off"
+#define GNC_BILLTERM_TYPE 		"bill type"
+#define GNC_BILLTERM_DISCOUNT	"amount of discount"
+#define GNC_BILLTERM_REFCOUNT	"reference count"
+/** @} */
+
 /**
  * How to interpret the amount.
  * You can interpret it as a VALUE or a PERCENT.
