@@ -1363,7 +1363,7 @@ static QofObject gncInvoiceDesc =
   interface_version:  QOF_OBJECT_VERSION,
   e_type:             _GNC_MOD_NAME,
   type_label:         "Invoice",
-  create:             NULL,
+  create:             (gpointer)gncInvoiceCreate,
   book_begin:         NULL,
   book_end:           NULL,
   is_dirty:           qof_collection_is_dirty,
