@@ -353,7 +353,7 @@ static QofObject gncJobDesc =
   interface_version:  QOF_OBJECT_VERSION,
   e_type:             _GNC_MOD_NAME,
   type_label:         "Job",
-  create:             NULL,
+  create:             (gpointer)gncJobCreate,
   book_begin:         NULL,
   book_end:           NULL,
   is_dirty:           qof_collection_is_dirty,
