@@ -486,7 +486,7 @@ static QofObject gncVendorDesc =
   interface_version:  QOF_OBJECT_VERSION,
   e_type:             _GNC_MOD_NAME,
   type_label:         "Vendor",
-  create:             NULL,
+  create:             (gpointer)gncVendorCreate,
   book_begin:         NULL,
   book_end:           NULL,
   is_dirty:           qof_collection_is_dirty,
