@@ -1957,7 +1957,7 @@ static QofObject pricedb_object_def =
   interface_version: QOF_OBJECT_VERSION,
   e_type:            GNC_ID_PRICE,
   type_label:        "Price",
-  create:            NULL,
+  create:            (gpointer)gnc_price_create,
   book_begin:        pricedb_book_begin,
   book_end:          pricedb_book_end,
   is_dirty:          pricedb_is_dirty,
